--- a/data.html
+++ b/data.html
@@ -44,7 +44,9 @@
     </nav>
 
     <div class="container">
+        <img src="./images/data.webp" alt="Data" class="description-image">
         <h1>Data Converter</h1>
+
         <input type="number" name="input-value" id="input-value" placeholder="Enter number" title="Enter desired data">
         <select name="input-type" id="input-type" title="Select data type">
             <option value="bit">Bit</option>
@@ -54,7 +56,11 @@
             <option value="gb">Gigabytes (gb)</option>
             <option value="tb">Terabyte (tb)</option>
             <option value="pb">Petabyte (pb)</option>
-        </select> <br>
+        </select>
+         <br>
+         <div class="convert-logo-div">
+            <img src="./images/animated/convert.gif" alt="Convert" class="description-image">
+        </div>
         <input type="number" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
         <select name="output-type" id="output-type" title="Select data type">
             <option value="bit">Bit</option>
