--- a/discount.html
+++ b/discount.html
@@ -45,6 +45,7 @@
     </nav>
 
     <div class="container">
+        <img src="./images/discount.webp" alt="Data" class="description-image">
         <h1>Discount Calculator</h1>
         <p>Enter the original price and discount percentage.<br>It will automatically calculate the result.</p>
         <div>
@@ -58,6 +59,9 @@
                 id="discount-percentage">
         </div>
         <br>
+        <div class="convert-logo-div">
+            <img src="./images/animated/discount.gif" alt="Convert" class="description-image">
+        </div>
         <p id="after-amount">Save amount : 0.00<br> Amount after discount : 0.00</p>
     </div>
 
