--- a/length.html
+++ b/length.html
@@ -45,6 +45,7 @@
     </nav>
 
     <div class="container">
+        <img src="./images/length.webp" alt="Data" class="description-image">
         <h1>Length Converter</h1>
         <input type="number" title="Enter length" name="input-value" id="input-value" placeholder="Enter length">
         <select name="input-type" id="input-type" title="Click to select">
@@ -67,6 +68,9 @@
             <option value="A">Angstrom</option>
         </select>
         <br>
+        <div class="convert-logo-div">
+            <img src="./images/animated/convert.gif" alt="Convert" class="description-image">
+        </div>
         <input type="number" name="output-value" id="output-value" title="Output" placeholder="Converted Length">
 
         <Select name="output-type" id="output-type" title="Click to select">
