--- a/mass.html
+++ b/mass.html
@@ -45,6 +45,7 @@
     </nav>
 
     <div class="container">
+        <img src="./images/mass.webp" alt="Data" class="description-image">
         <h1>Mass Converter</h1>
         <input type="number" name="input-value" id="input-value" placeholder="Enter mass" title="Enter desired mass">
         <select name="input-type" id="input-type" title="Select mass type">
@@ -62,6 +63,9 @@
             <option value="gr">Grain (gr)</option>
         </select>
         <br>
+        <div class="convert-logo-div">
+            <img src="./images/animated/convert.gif" alt="Convert" class="description-image">
+        </div>
         <input type="number" id="output-value" placeholder="Result" name="output-value" title="Result box" readonly>
         <select name="output-type" id="output-type" title="Select mass type">
             <option value="mmg">Microgram(mmg)</option>
