--- a/numbersystem.html
+++ b/numbersystem.html
@@ -44,6 +44,7 @@
         </div>
     </nav>
     <div class="container">
+        <img src="./images/number-system.webp" alt="Data" class="description-image">
         <h1>Number System Converter</h1>
         <input type="text" name="input-value" id="input-value" placeholder="Enter number" title="Enter desired mass">
         <select name="input-type" id="input-type" title="Select number type">
@@ -53,6 +54,9 @@
             <option value="16">Hexa-Decimal</option>
         </select>
         <br>
+        <div class="convert-logo-div">
+            <img src="./images/animated/convert.gif" alt="Convert" class="description-image">
+        </div>
         <input type="text" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
         <select name="output-type" id="output-type" title="Select number type">
             <option value="2">Binary</option>
