--- a/power.html
+++ b/power.html
@@ -52,6 +52,7 @@
     </nav>
 
     <div class="container">
+        <img src="./images/power-mod.webp" alt="Data" class="description-image">
         <h1>Power Mod Calculator</h1>
         <p>Enter the terms as x to the power y mod n = res and it will automatically calculate the result.</p>
         <div>
@@ -65,6 +66,9 @@
         <div>
             <label for="mod">Mod (n)</label> <br>
             <input type="number" name="mod" id="mod" placeholder="Enter mod">
+        </div>
+        <div class="convert-logo-div">
+            <img src="./images/animated/calculator.gif" alt="Convert" class="description-image">
         </div>
         <p id="result"><span id="x">x</span> <sup><span id="y">y</span></sup> <span id="n">mod n</span> <span id="res">=
                 res</span>
