--- a/temperature.html
+++ b/temperature.html
@@ -45,6 +45,7 @@
     </nav>
 
     <div class="container">
+        <img src="./images/temperature.webp" alt="Data" class="description-image">
         <h1>Temperature Converter</h1>
         <input type="number" name="input-value" id="input-value" placeholder="Enter temperature"
             title="Enter desired type">
@@ -56,6 +57,9 @@
             <option value="Re">Reaumur (&deg;Re)</option>
         </select>
         <br>
+        <div class="convert-logo-div">
+            <img src="./images/animated/convert.gif" alt="Convert" class="description-image">
+        </div>
         <input type="number" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
         <select name="output-type" id="output-type" title="Select temperature type">
             <option value="c">Celsius (&deg;c)</option>
