--- a/text.html
+++ b/text.html
@@ -155,6 +155,7 @@
         </div>
     </nav>
     <div class="container">
+        <img src="./images/animated/text.gif" alt="Data" class="description-image">
         <h1>Text Styling</h1>
         <p class="info">Simple text styler, use buttons or simply copy paste.</p>
         <textarea name="input-text" id="input-text" title="Enter text here" placeholder="Enter text here ...." rows="10"
