--- a/about.html
+++ b/about.html
@@ -49,10 +49,17 @@
         }
 
         .signature {
-            text-align: right;
+            height: 1.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-size: 1.2rem;
             color: #333;
             font-style: italic;
+        }
+
+        .signature p {
+            padding: 18px 0;
         }
 
         .signature span {
@@ -61,7 +68,9 @@
 
         .code-link {
             width: 100%;
-            text-align: center !important;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 1.2rem;
         }
 
@@ -69,6 +78,16 @@
             color: black;
             text-decoration: none;
             font-weight: bold;
+        }
+
+        @media (max-width:768px) {
+            h1 {
+                font-size: 1.5rem;
+                padding: 0rem 0;
+            }
+            .container{
+                padding: 5px;
+            }
         }
     </style>
     <link rel="stylesheet" href="./footer.css">
@@ -104,7 +123,11 @@
     </nav>
 
     <div class="container">
-        <h1>About This App</h1>
+        <div class="convert-logo-div">
+            <h1>About This App</h1>
+            <img src="./images/animated/about.gif" alt="Convert" class="description-image">
+        </div>
+
         <p>
             Welcome to the Unit Converter App! This application is designed to simplify conversions across various units
             of measurement, making it easier for you to switch between different systems—whether you're working with
@@ -124,14 +147,18 @@
             Technology Used : Vanilla html , css , js.
         </p>
 
-        <p class="signature">
-            Made with ❤️ by <span>Arun Neupane</span>
-        </p>
-        <p class="code-link">
-            Source code available here <a href="https://github.com/arundada9000/Unit-Converter">Code</a>
-        </p>
+        <div class="signature">
+            <p>Made with </p>
+            <img src="./images/animated/heart.gif" alt="Convert" class="description-image">
+            <p> by <span>Arun Neupane</span></p>
+        </div>
+
     </div>
 
+    <div class="code-link">
+        <img src="./images/animated/software.gif" alt="Source code" class="description-image">
+        <p>Source code available here <a href="https://github.com/arundada9000/Unit-Converter">Code</a></p>
+    </div>
     <footer>
         <div class="footer-container">
             <div class="footer-info">
