--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </head>
 
 <body>
-    <h1>Unit Converter</h1>
+    <div class="convert-logo-div">
+        <img src="./images/animated/convert.gif" alt="Convert" class="description-image">
+        <h1>Unit Converter</h1>
+    </div>
     <div class="index-container">
         <div class="card" onclick='window.location.href = "./data.html"'>
             <img src="./images/data.png" alt="Data Converter">
