--- a/privacy.html
+++ b/privacy.html
@@ -56,6 +56,10 @@
             margin-bottom: 1.5rem;
             line-height: 1.6;
         }
+
+        .convert-logo-div h2 {
+            padding-top: 15px;
+        }
     </style>
 </head>
 
@@ -89,14 +93,20 @@
     </nav>
 
     <div class="container">
-        <h1>Privacy Policy</h1>
+        <div class="convert-logo-div">
+            <img src="./images/animated/privacy-policy.gif" alt="Contact" class="description-image">
+            <h1>Privacy Policy</h1>
+        </div>
 
         <p>
             At Unit Converter, we are committed to protecting your privacy. This Privacy Policy outlines the types of
             personal information we may collect and how we use, share, and protect that information.
         </p>
 
-        <h2>Information We Collect</h2>
+        <div class="convert-logo-div">
+            <img src="./images/animated/info.gif" alt="Contact" class="description-image">
+            <h2>Information We Collect</h2>
+        </div>
         <p>
             We collect minimal personal information, and only to provide you with the best possible user experience. The
             types of information we may collect include:
@@ -107,7 +117,10 @@
             <li>Basic contact information (such as email) if provided voluntarily through contact forms.</li>
         </ul>
 
-        <h2>How We Use Your Information</h2>
+        <div class="convert-logo-div">
+            <img src="./images/animated/file.gif" alt="Contact" class="description-image">
+            <h2>How We Use Your Information</h2>
+        </div>
         <p>
             The information we collect is used solely to improve the functionality and user experience of the Unit
             Converter app. Specifically, we may use your data to:
@@ -118,26 +131,38 @@
             <li>Analyze usage trends to improve performance.</li>
         </ul>
 
-        <h2>Third-Party Services</h2>
+        <div class="convert-logo-div">
+            <img src="./images/animated/incognito.gif" alt="Contact" class="description-image">
+            <h2>Third-Party Services</h2>
+        </div>
         <p>
             We do not share your personal data with third-party companies for marketing purposes. However, we may use
             third-party analytics tools to understand how users interact with our app.
         </p>
 
-        <h2>Security of Your Information</h2>
+        <div class="convert-logo-div">
+            <img src="./images/animated/password.gif" alt="Contact" class="description-image">
+            <h2>Security of Your Information</h2>
+        </div>
         <p>
             We take data security seriously and use appropriate measures to protect your personal information from
             unauthorized access or disclosure. However, please note that no data transmission over the internet is
             completely secure.
         </p>
 
-        <h2>Changes to This Policy</h2>
+        <div class="convert-logo-div">
+            <img src="./images/animated/network.gif" alt="Contact" class="description-image">
+            <h2>Changes to This Policy</h2>
+        </div>
         <p>
             We may update this Privacy Policy periodically. Any changes will be posted on this page with an updated
             effective date.
         </p>
 
-        <h2>Contact Us</h2>
+        <div class="convert-logo-div">
+            <img src="./images/animated/phone-contact.gif" alt="Contact" class="description-image">
+            <h2>Contact Us</h2>
+        </div>
         <p>
             If you have any questions or concerns about this Privacy Policy or our practices, please contact us at
             <a href="mailto:arunneupane0000@gmail.com">arunneupane0000@gmail.com</a>.
