--- a/time.html
+++ b/time.html
@@ -45,6 +45,7 @@
     </nav>
 
     <div class="container">
+        <img src="./images/time.webp" alt="Data" class="description-image">
         <h1>Time Converter</h1>
         <input type="number" name="input-value" id="input-value" placeholder="Enter number" title="Enter desired mass">
         <select name="input-type" id="input-type" title="Select time type">
@@ -65,6 +66,9 @@
             <option value="millennium">Millennium</option>
         </select>
         <br>
+        <div class="convert-logo-div">
+            <img src="./images/animated/convert.gif" alt="Convert" class="description-image">
+        </div>
         <input type="number" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
         <select name="output-type" id="output-type" title="Select time type">
             <option value="fs">femtosecond (fs)</option>
