--- a/temperature.html
+++ b/temperature.html
@@ -17,29 +17,22 @@
 
 <body>
     <nav>
-        <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
-        <div class="nav-links1">
-            <a href="./index.html">Home</a>
-            <a href="./data.html">Data</a>
-            <a href="./length.html">Length</a>
-            <a href="./time.html">Time</a>
-            <a href="./mass.html">Mass</a>
-            <a href="./temperature.html" class="bb">Temperature</a>
-            <a href="./numbersystem.html">Number System</a>
-            <a href="./discount.html">Discount</a>
-            <a href="./power.html">Power mod</a>
-            <a href="./text.html">Text</a>
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
+
         <div class="nav-links">
             <a href="./index.html">Home</a>
-            <a href="./data.html">Data Converter</a>
-            <a href="./length.html">Length Converter</a>
-            <a href="./time.html">Time Converter</a>
-            <a href="./mass.html">Mass Converter</a>
-            <a href="./temperature.html">Temperature Converter</a>
-            <a href="./numbersystem.html">Number System Converter</a>
-            <a href="./discount.html">Discount Calculator</a>
-            <a href="./power.html">Power mod Calculator</a>
+            <a href="./data.html">Data <span id="converterText">Converter</span></a>
+            <a href="./length.html">Length <span id="converterText">Converter</span></a>
+            <a href="./time.html">Time <span id="converterText">Converter</span></a>
+            <a href="./mass.html">Mass <span id="converterText">Converter</span></a>
+            <a href="./temperature.html" class="bb">Temperature <span id="converterText">Converter</span></a>
+            <a href="./numbersystem.html">Number System <span id="converterText">Converter</span></a>
+            <a href="./discount.html">Discount <span id="converterText">Calculator</span></a>
+            <a href="./power.html">Power mod <span id="converterText">Calculator</span></a>
             <a href="./text.html">Text Styler</a>
         </div>
     </nav>
