--- a/about.html
+++ b/about.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./styles.css">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -81,12 +80,17 @@
         }
 
         @media (max-width:768px) {
+            body {
+                padding: 0;
+            }
+
             h1 {
                 font-size: 1.5rem;
                 padding: 0rem 0;
             }
-            .container{
-                padding: 5px;
+
+            .container {
+                padding: 20px;
             }
         }
     </style>
@@ -95,29 +99,22 @@
 
 <body>
     <nav>
-        <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
-        <div class="nav-links1">
-            <a href="./index.html">Home</a>
-            <a href="./data.html">Data</a>
-            <a href="./length.html">Length</a>
-            <a href="./time.html">Time</a>
-            <a href="./mass.html">Mass</a>
-            <a href="./temperature.html">Temperature</a>
-            <a href="./numbersystem.html">Number System</a>
-            <a href="./discount.html">Discount</a>
-            <a href="./power.html">Power mod</a>
-            <a href="./text.html">Text</a>
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
+
         <div class="nav-links">
             <a href="./index.html">Home</a>
-            <a href="./data.html">Data Converter</a>
-            <a href="./length.html">Length Converter</a>
-            <a href="./time.html">Time Converter</a>
-            <a href="./mass.html">Mass Converter</a>
-            <a href="./temperature.html">Temperature Converter</a>
-            <a href="./numbersystem.html">Number System Converter</a>
-            <a href="./discount.html">Discount Calculator</a>
-            <a href="./power.html">Power mod Calculator</a>
+            <a href="./data.html">Data <span id="converterText">Converter</span></a>
+            <a href="./length.html">Length <span id="converterText">Converter</span></a>
+            <a href="./time.html">Time <span id="converterText">Converter</span></a>
+            <a href="./mass.html">Mass <span id="converterText">Converter</span></a>
+            <a href="./temperature.html">Temperature <span id="converterText">Converter</span></a>
+            <a href="./numbersystem.html">Number System <span id="converterText">Converter</span></a>
+            <a href="./discount.html">Discount <span id="converterText">Calculator</span></a>
+            <a href="./power.html">Power mod <span id="converterText">Calculator</span></a>
             <a href="./text.html">Text Styler</a>
         </div>
     </nav>
